k8s/prod/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-canary
  namespace: prod
  labels:
    app: flask-app
    env: prod
    release: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      env: prod
      release: canary
  template:
    metadata:
      labels:
        app: flask-app
        env: prod
        release: canary
    spec:
      automountServiceAccountToken: false
      containers:
      - name: flask-app
        image: kikyputraa/devops-playground:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
            ephemeral-storage: "50Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
