k8s/prod/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-canary
  namespace: prod
spec:
  selector:
    app: flask-app
    env: prod
    release: canary
  ports:
  - port: 80
    targetPort: 5000
