k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-prod
  namespace: prod
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
