k8s/prod/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-canary
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10" # 10% trafik ke versi baru
spec:
  rules:
  - host: flask.devops.local # Host HARUS sama dengan main prod
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service-canary # Mengarah ke service canary kamu
            port:
              number: 80
